# distro-file-system

./: .gitignore  README.md  distro-file-system.cabal  stack.yaml
.stack-work/install/x86_64-linux/lts-7.11/8.0.1/flag-cache/: StateVar-1.1.0.4-CJpWsiXJdd89SnV9dZtTwc  aeson-0.11.2.1-5ZQWuTFmffALcfpzDCXoOz  aeson-compat-0.3.6-5wE6V2cyaFcB5no9HXBKW5  aeson-pretty-0.8.2-FONEppYcAcNL67yNmD5AQ1  ansi-terminal-0.6.2.3-448ipfN5j28Ha0AgPiJmdI  ansi-wl-pprint-0.6.7.3-LVnipygDrAR1FEMFhjxcQX  appar-0.1.4-1in4Ewd8JBkAYDZSWXLSe0  apply-refact-0.3.0.0-CsP1IxrjzD97yG3NXAxY6O  async-2.1.1-xFiBzw9xoB8HPZAuxUY2o  attoparsec-0.13.1.0-5Olk1S76r1CDYzFS6V3sZR  auto-update-0.1.4-GAesfFmqoZzBz6e09kRyzb  base-compat-0.9.1-tmPpmtbHbvIDjFWbkjGrR  base-orphans-0.5.4-5IQvrjd7gNP548VkOOyIq6  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY  bifunctors-5.4.1-8Xk5Wsnk1fr6rBLkW9MO8p  blaze-builder-0.4.0.2-KWDLbdBYSBoALiMW0LHIz1  blaze-html-0.8.1.2-2kD96kJB6JEGow1dP8IL6C  blaze-markup-0.7.1.0-5a5pBG0fO8kJX4ke3K7j3D  byteorder-1.0.4-BbL4c17EpZrL9PcZm0xys9  bytestring-builder-0.10.8.1.0-4GkSrJiY0n01lBdCh7onK  bytestring-conversion-0.3.1-EvX949he2UAKBbGbE7IZfu  case-insensitive-1.2.0.7-FlqweN7AuKj9EdU2arVEt4  cmdargs-0.10.14-8WOlFWoK1XlCebTZE2edgd  comonad-5-2RMxpSOQ5MCHLHIelJrHD4  contravariant-1.4-KSQE31a7FruKHDlp90hIUT  cookie-0.4.2.1-2a2c54yIyBn79Ul3iLWclJ  cryptonite-0.19-G9PYO4oOEqhDTta2u9rAaU  data-default-class-0.1.2.0-FYQpjIylblBDctdkHAFeXA  distributive-0.5.0.2-Cdz2vLOk85j1doGXLcictT  dlist-0.8.0.2-GWAMmbX9rLg3tqrbOizHGv  double-conversion-2.0.1.0-GBJeLbJOvPcIufCPOIwofV  easy-file-0.2.1-bAUkz2rC2kFhBbPjw2Of5  exceptions-0.8.3-7py7fmRxowDFpHmiHGKrTb  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  fast-logger-2.4.7-E7H6TuZQzia59KuB50vayl  file-embed-0.0.10-IXfudWSq57y1Athysk5ifZ  filemanip-0.3.6.3-DFENeGbODv96RwGywUxkEu  free-4.12.4-Etm59Dm8iExFxAy1L49Ovd  ghc-exactprint-0.5.2.1-Kab66iN2Pyj4ca2CLfMmDD  ghc-paths-0.1.0.9-GIOnKzk0HmEBZ77Q1HsThK  (+63 more)
.stack-work/install/x86_64-linux/lts-7.11/8.0.1/pkgdb/: distro-file-system-0.1.0.0-1N0P4LjBiJnHv0sOgvoER.conf  package.cache
Client/: client.cabal  stack.yaml
Client/app/: Client.hs  Main.hs
Client/src/: Lib.hs
DirectoryServer/: DirectoryServer.cabal  stack.yaml
DirectoryServer/app/: DirectoryServer.hs  Main.hs
DirectoryServer/src/: Lib.hs
FileServer/: fileserver.cabal  stack.yaml
FileServer/app/: Client.hs  FileServer.hs  Main.hs
FileServer/app/file/: temp.html
FileServer/src/: Lib.hs
FileServer/static-files/foo/: tempo.txt
FileServer/static-files/temp/: test.txt
FileServer/test/: deleteTest.py  postTest.py  putTest.py
app/: Client.hs  FileServer.hs  Lib.hs  Main.hs
src/: Lib.hs
test/: getTest.py
