name:                fileserver
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/distro-file-system#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.9.0.0
                     , aeson >= 0.11
                     , base-compat >= 0.9
                     , bson >= 0.3
                     , mongoDB >= 2.1
                     , servant-server >= 0.9.1.1
                     , text >= 1.2
                     , wai >= 3.2
                     , warp >= 3.2
  default-language:    Haskell2010

executable fileserver
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson >= 0.11
                     , aeson-compat >= 0.3
                     , attoparsec >= 0.13
                     , base >= 4.9.0.0
                     , base-compat >= 0.9
                     , blaze-html >= 0.8
                     , blaze-markup >= 0.7
                     , bson >= 0.3
                     , bytestring >= 0.10
                     , directory >= 1.2
                     , fileserver
                     , ghc-prim >= 0.5
                     , http-media >= 0.6
                     , http-types >= 0.9
                     , http-client >= 0.4
                     , lucid >= 2.9
                     , mongoDB >= 2.1
                     , mtl >= 2.2
                     , resourcet >= 1.1
                     , servant >= 0.9.1.1
                     , servant-server >= 0.9.1.1
                     , servant-client >= 0.9.1.1
                     , string-conversions >= 0.4
                     , optparse-applicative >= 0.12
                     , time >= 1.6
                     , text >= 1.2
                     , wai >= 3.2
                     , warp >= 3.2
  default-language:    Haskell2010

test-suite distro-file-system-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fileserver
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/distro-file-system
